--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -55,3 +55,10 @@ Metrics/LineLength:
 Style/NumericLiterals:
   Exclude:
     - 'db/schema.rb'
+
+Layout/EmptyLinesAroundBlockBody:
+  Exclude:
+    - 'db/schema.rb'
+
+Metrics/MethodLength:
+  Max: 13
